re PR lto/51916 (FAIL: gcc.dg/lto/trans-mem-3 c_lto_trans-mem-3_0.o-c_lto_trans-mem-3_1.o link, -flto (internal compiler error))

PR lto/51916
        * lto-wrapper.c (run_gcc): Pass the LTO section name to
        simple_object_start_read.


Co-Authored-By: Iain Sandoe <developer@sandoe-acoustics.co.uk>
Co-Authored-By: Patrick Marlier <patrick.marlier@gmail.com>

From-SVN: r183433